2024-02-18T08:18:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7947671087 # 127
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
* notice: last 14d: unq all: 181 310
* notice: prev accum: outdated-unq outdated-all / unq all: 2625 6676 / 2867 7023
* notice: next accum: outdated-unq outdated-all / unq all: 2625 6676 / 2875 7033
* notice: prev exec diff / last date diff / accum: unq all: +8 +10 -20 -35 / +8 +10 -0 -0 / 8 10
* notice: removed / changed dates: [] / [2024-02-04 2024-02-18]

2024-02-18T01:11:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7945552842 # 126
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
* notice: last 14d: unq all: 189 335
* notice: prev accum: outdated-unq outdated-all / unq all: 2597 6640 / 2867 7023
* notice: next accum: outdated-unq outdated-all / unq all: 2625 6676 / 2867 7023
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -8 -12 / +29 +48 -8 -12 / 21 36
* notice: removed / changed dates: [2024-02-03] / [2024-02-04]

2024-02-17T16:18:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7942871877 # 125
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 196 348
* notice: prev accum: outdated-unq outdated-all / unq all: 2597 6640 / 2858 7011
* notice: next accum: outdated-unq outdated-all / unq all: 2597 6640 / 2867 7023
* notice: prev exec diff / last date diff / accum: unq all: +9 +12 -11 -13 / +36 +46 -0 -0 / 36 46
* notice: removed / changed dates: [] / [2024-02-03 2024-02-17]

2024-02-17T08:17:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7940431417 # 124