@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-18T08:18:42Z",
-  "count" : 10,
-  "count_minmax" : [ 10, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 8,
-  "uniques_minmax" : [ 8, 8 ],
-  "uniques_decinc" : [ -0, +8 ]
+  "timestamp" : "2024-02-18T16:18:53Z",
+  "count" : 13,
+  "count_minmax" : [ 10, 13 ],
+  "count_decinc" : [ -0, +13 ],
+  "uniques" : 10,
+  "uniques_minmax" : [ 8, 10 ],
+  "uniques_decinc" : [ -0, +10 ]
 }
