@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-18T08:18:42Z",
-  "count_outdated" : 6676,
-  "uniques_outdated" : 2625,
-  "count" : 7033,
-  "uniques" : 2875,
+  "timestamp" : "2024-02-18T16:18:53Z",
+  "count_outdated" : 6724,
+  "uniques_outdated" : 2654,
+  "count" : 7036,
+  "uniques" : 2877,
   "clones" : [
-    {
-      "timestamp": "2024-02-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 48 ],
-      "count_decinc": [ 47, 48 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 29 ],
-      "uniques_decinc": [ 28, 29 ]
-    },
     {
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 14,
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2024-02-18T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ],
-      "uniques_decinc": [ 0, 8 ]
+      "count": 13,
+      "count_minmax": [ 10, 13 ],
+      "count_decinc": [ 0, 13 ],
+      "uniques": 10,
+      "uniques_minmax": [ 8, 10 ],
+      "uniques_decinc": [ 0, 10 ]
     }
   ]
 }
