@@ -1,12 +1,7 @@
 {
-  "count": 310,
+  "count": 312,
   "uniques": 181,
   "clones": [
-    {
-      "timestamp": "2024-02-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 14,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2024-02-18T00:00:00Z",
-      "count": 10,
-      "uniques": 8
+      "count": 13,
+      "uniques": 10
     }
   ]
 }
